--- a/apache_spark/thesis/abstract_de.tex
+++ b/apache_spark/thesis/abstract_de.tex
@@ -6,14 +6,8 @@
 %% Wird am Ende der Arbeit nochmals überarbeitet/angepasst
 
 \section*{Kurzfassung}
-Gegenstand dieser Arbeit sind die Grundlagen der Verarbeitung und Analyse großer Datenmengen (Big Data) am konkreten Beispiel von Apache Spark. Zunächst sollen verschiedene Ansätze mit Ihren Funktionsweisen sowie den Vor- und Nachteilen diskutiert werdem. Hier werden zuerst allgemeine Grundlagen zu Big Data erarbeitet. Was ist Big Data, was unterscheidet die Verarbeitung von strukturierten und unstrukturierten Daten, Relationale Datenbanken vs. noSQL, wie müssen die Quelldaten für die jeweiligen Verarbeitungen beschaffen sein, welche besonderen Herausforderungen stellen gestreamte Daten an die Verarbeitung. Besonders wird hier auf Hadoop und den Map/Reduce-Algorithmus eingegangen, um das bisher etablierte Vorgehen zu beschreiben und ein grundsätzliches Verständnis für die Domäne ``Big Data Processing'' zu schaffen. In diesem Kontext wird das gesamte Ökosystem rund um Hadoop vorgestellt. 
 
-Nachdem eine Einführung in das Thema ``Big Data Processing'' erfolgt ist und ein entsprechend quantitativ und qualitativ brauchbarer Datensatz zur Verfügung steht, werden die Next-Generation Data-Processing Technologien betrachtet. Kernthema ist hier Apache Spark und der gesamte BDAS (Berkeley Data Analytics Stack), der von den den AMP-Labs innerhalb von Apache-Projekten um Spark herum aufgebaut wurde. Zu praktisch jeder ``offiziellen" BDAS-Implementierung existieren noch Alternativen. Besonders Apache flink wird hier als Alternative näher untersucht. Auch Applikationen, die auf dem eigentlichen Stack aufsetzen, werden näher betrachtet und entsprechenden Praxistests unterzogen (beispielsweise H2O für statistische Analysen). 
-
-Danach wird die API von Spark und deren Möglichkeiten mit Scala, Java und Clojure näher betrachtet und durch jeweils eigene Implementierungen untersucht. 
-
-Die Arbeit schließt mit durch verschiedene Versuchsreihen fundierte Empfehlungen für die unterschiedlichen Anforderungen im Bereich des Big-Data-Processing.
-
+Daten gelten heute als der Rohstoff der Zukunft. Ständig werden extreme Mengen von Daten von den unterschiedlichsten Quellen generiert. Sei es durch Social-Media, durch Suchmaschinen, durch Bewegungs- oder andere Sensordaten, durch Logdateien, etc. Die Menge der generierten Daten steigt von Jahr zu Jahr an - von ca 130 Exabyte\footnote{1 Exabyte = \(10^1^8\) Byte oder eine Million Terabyte.} im Jahre 2005 bis zu 8591 Exabyte für das Jahr 2015 und für 2020 werden Prognosen zufolge sogar über 40000 Exabyte Daten erzeugt \citeint{sta15}. Diese Daten haben wenig miteinander gemeinsam. Es handelt sich um strukturierte oder unstrukturierte Datensätze, um persistente oder um flüchtige Daten aus einem Strom. Für all diese Daten sollen aber vergleichbare Werkzeuge zur Analyse und Verarbeitung verfügbar sein. Ein Ansatz für dieses Problem liefert Apache Spark mit dem dazugehörigen Berkeley Data Analytics Stack. Dies sind Werkzeuge für Analyse massiver Datenmengen, Verarbeitung von flüchtigen Streamingdaten, Batchverarbeitung, SQL-Abfragen und verschiedenen Aufgaben aus dem Bereich des Machine Learning. In dieser Thesis werden die Bibliotheken des Berkeley Data Analytics Stack vorgestellt, gegenüber Alternativimplementierungen verglichen und Messungen unterzogen. Für diesen Zweck wurden Metriken definiert, sowie Testumgebungen aufgesetzt und Prototypen für die jeweiligen Bibliotheken implementiert.   
 
 
 %% eof
