--- a/apache_spark/thesis/bdas.tex
+++ b/apache_spark/thesis/bdas.tex
@@ -147,9 +147,9 @@ Ein weiterer Unterschied zu Hive ist die sogenannte Partial-DAG-Execution (PDE).
 
 
 
-\subsection{Zusammenfassung}
-\label{section:storm}
+\section{Zusammenfassung}
+\label{section:zusammen}
 
 
 
-
+TBD!
