--- a/apache_spark/thesis/evaluierung.tex
+++ b/apache_spark/thesis/evaluierung.tex
@@ -46,56 +46,66 @@ Worker Node 3 & AMD 6378 & 4 * 16 & 512 GB &  Debian Linux\\ \hline
 \section{Definition von Metriken für die Bibliotheken des BDAS}
 \label{section:definition der metriken}
 
-Blabla
+TBD!
 
 
 
 \section{Beschreibung der Messverfahren}
 \label{section:messumgebungen}
 
-Blabla
+TBD!
 
 
 \section{Beschreibung der Messumgebungen}
 \label{section:messumgebungen}
 
+TBD!
+
 \subsection{Lokales Single Node Cluster  }
 \label{section:lokales single node}
 
-Blablba
+TBD!
 
 \subsection{Lokales Multi Node Cluster}
 \label{section:tachyon}
 
-Blablba
+TBD!
 
 \subsection{Remote Cluster an der Beuth Hochschule}
 \label{section:remote}
 
-Blablba
+TBD!
 
 \section{Ergebnisse}
 \label{section:ergebnisse}
 
-Blablba
+TBD!
 
 \subsection{Messergebnisse Apache Spark}
 \label{section:spark eval}
 
-Blablba
+TBD!
 
 \subsection{Messergebnisse Apache Flink}
 \label{section:mllib arch}
 
-Blablba
+TBD!
 
 \subsection{Messergebnisse MLLib}
 \label{section:mllib arch}
 
-Blablba
+TBD!
 
 \subsection{Messergebnisse H2O}
 \label{section:mllib arch}
 
-Blablba
+TBD!
 
+
+
+\section{Zusammenfassung}
+\label{section:zusammen}
+
+
+
+TBD!
