--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,45 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-15 18:09:24 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-15 21:49:12 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{wik07,
+	Author = {Wikibench},
+	Date-Added = {2015-02-15 20:47:16 +0000},
+	Date-Modified = {2015-02-15 20:49:12 +0000},
+	Month = {01},
+	Title = {Wikipedia access traces URL:\url\{http://www.wikibench.eu/?page_id=60}},
+	Year = {2014. \note{Aufgerufen am 28.10.2014}}}
+
+@misc{sta15,
+	Author = {Statista},
+	Date-Added = {2015-02-15 20:08:56 +0000},
+	Date-Modified = {2015-02-15 20:10:44 +0000},
+	Month = {01},
+	Title = {Prognose zum Volumen der j{\"a}hrlich generierten digitalen Datenmenge weltweit in den Jahren 2005 bis 2020 (in Exabyte) URL: \url{http://de.statista.com/statistik/daten/studie/267974/umfrage/prognose-zum-weltweit-generierten-datenvolumen/}},
+	Year = {2015. \note{Aufgerufen am 14.02.2015}}}
+
+@misc{tar14,
+	Author = {Simon Lamplugh},
+	Date-Added = {2015-02-15 19:42:51 +0000},
+	Date-Modified = {2015-02-15 19:44:50 +0000},
+	Howpublished = {Docker, Microservices, Continuous Delivery, DevOps, Automation},
+	Month = {12},
+	Title = {Continues Deployment of Dockerized Microservices URL:\{http://capgemini.github.io/devops/dockerizing-microservices/}},
+	Year = {2014. \note{Aufgerufen am 07.01.2015}}}
+
+@misc{adv12,
+	Author = {Matei Zaharia},
+	Date-Added = {2015-02-15 19:09:54 +0000},
+	Date-Modified = {2015-02-15 19:10:48 +0000},
+	Month = {06},
+	Title = {Advanced Spark Features URL:\url{http://ampcamp.berkeley.edu/wp-content/uploads/2012/06/matei-zaharia-amp-camp-2012-advanced-spark.pdf}},
+	Year = {2012}}
 
 @misc{kry14,
 	Author = {EsotericSoftware},
