--- a/apache_spark/thesis/schlussbetrachtung.tex
+++ b/apache_spark/thesis/schlussbetrachtung.tex
@@ -2,21 +2,15 @@
 \label{chapter:schlussbetrachtung}
 
 
-Blablabla 
+TBD!
 
 
 \section{Zusammenfassung}
 \label{section:zusammenfassung}
 
-Blablba
+TBD!
 
 \section{Ausblick}
 \label{section:ausblick}
 
-Die bisher verbreiteten Cluster-Computing-Frameworks für Big Data Analytics, allen voran Hadoop, besitzen zwar umfangreiche Funktionen für Parallelverarbeitung und Funktionen für Task-Verteilung und Fehlerrobustheit, doch trotz umfangreicher Zugriffsmechanismen auf die Ressourcen eines Clusters werden die Vorteile der Nutzung von verteiltem Hauptspeicher hier nicht genutzt \citelit{rdd12}. Speziell für Aufgaben, die auf berechnete Zwischenergebnisse zugreifen müsssen, 
-
-
-RDDs are conceptually similar to views in a database, and persistent RDDs resemble materialized views [28]. However, like DSM systems, databases typically allow fine-grained read-write access to all records, requiring logging of operations and data for fault tolerance and additional overhead to maintain
-￼
-consistency. These overheads are not required with the coarse-grained transformation model of RDDs.
-
+TBD!
