--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-15 21:49:12 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-16 08:12:38 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,9 +11,9 @@
 @misc{wik07,
 	Author = {Wikibench},
 	Date-Added = {2015-02-15 20:47:16 +0000},
-	Date-Modified = {2015-02-15 20:49:12 +0000},
+	Date-Modified = {2015-02-16 07:12:38 +0000},
 	Month = {01},
-	Title = {Wikipedia access traces URL:\url\{http://www.wikibench.eu/?page_id=60}},
+	Title = {Wikipedia access traces URL:\url\{http://www.wikibench.eu/}},
 	Year = {2014. \note{Aufgerufen am 28.10.2014}}}
 
 @misc{sta15,
